<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AvalancheWarning</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_tfUsrname">Username</string>
    <string name="login_rbEnglish">English</string>
    <string name="login_rbGerman">German</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_btnAbort">Abort</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_tfAvalanche_probability">Avalanche probability:</string>
    <string name="main_btnSendPhotos">Send photo</string>
    <string name="main_btnMainMenu">Main Menu</string>
    <string name="main_forecast_Monday">MON</string>
    <string name="main_forecast_Tuesday">TUE</string>
    <string name="main_forecast_Wednesday">WED</string>
    <string name="main_forecast_Thursday">THU</string>
    <string name="main_forecast_Friday">FRI</string>
    <string name="main_forecast_Saturday">SAT</string>
    <string name="main_forecast_Sunday">SUN</string>
    <string name="main_txtNoDate">No Date</string>
    <string name="main_txt_NoForecast">No Forecast</string>
    <string name="login_pw">password</string>
    <string name="login_err_wrongPasswordOrUsername">False username or password</string>
    <string name="main_btnGetGPS">Get current GPS-location</string>
    <string name="main_txtView_CurrentRegion">Current region:</string>
    <string name="main_txtAvalancheProbability_NoData">No data available</string>
    <string name="main_txtAvalancheProbability_Low">Low</string>
    <string name="main_txtAvalancheProbability_Medium">Medium</string>
    <string name="main_txtAvalancheProbability_High">High</string>
    <string name="main_chkConnected_Connected">Connected</string>
    <string name="main_btnConnect_Connect">Synchronize</string>
    <string name="main_btnTakePhoto">Take Photo</string>

</resources>