<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/main_btnMainMenu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="97dp"
        android:text="@string/main_tfAvalanche_probability" />

    <Button
        android:id="@+id/btnPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMainMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/main_btnPhoto" />

    <TextView
        android:id="@+id/txtDate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_txtNoDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/main_txtNoDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtForecast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtForecast1"
        android:layout_alignBottom="@+id/txtForecast1"
        android:layout_alignLeft="@+id/txtDate2"
        android:text="@string/main_txt_NoForecast" />

    <Button
        android:id="@+id/btnSendGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/main_btnSendGPS" />

    <TextView
        android:id="@+id/txtView_CurrentRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:text="@string/main_txtView_CurrentRegion" />

    <Spinner
        android:id="@+id/spn_CurrentRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/txtView_CurrentRegion" />

    <TextView
        android:id="@+id/txtForecast1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtDate1"
        android:text="@string/main_txt_NoForecast" />

    <TextView
        android:id="@+id/txtAvalancheProbability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spn_CurrentRegion"
        android:layout_alignLeft="@+id/txtForecast2"
        android:layout_marginLeft="14dp"
        android:text="@string/main_txtAvalancheProbability_NoData" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSendGPS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/main_btnConnect_Connect" />

</RelativeLayout>